2008-05-03  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_open_with_subtitle):
	Remove useless g_free(), if there's a MRL stored, it will
	be freed in _close()

2008-05-03  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_open_with_subtitle):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_open_with_subtitle),
	(bacon_video_widget_strdupnv), (bacon_video_widget_get_mrls):
	Make sure we store URIs as the MRL, not local paths, fixes
	direct seeking not working on local files
	Fix a few compilation warnings in the xine-lib backend

2008-04-29  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c: Add missing include

2008-04-29  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_open_with_subtitle):
	Try to get a local filename when possible, as there's no gio input
	plugin for xine-lib (Closes: #528763)

2008-04-29  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_open_with_subtitle):
	Use GIO to get 1) a nice URI, 2) or a local fuse path
	if giosrc isn't available (Closes: #528762)

2008-04-24  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/idl/totemIBasicPlayer.idl:
	* browser-plugin/idl/totemIComplexPlayer.idl:
	* browser-plugin/idl/totemICone.idl:
	* browser-plugin/idl/totemIConeAudio.idl:
	* browser-plugin/idl/totemIConeInput.idl:
	* browser-plugin/idl/totemIConePlaylist.idl:
	* browser-plugin/idl/totemIConePlaylistItems.idl:
	* browser-plugin/idl/totemIConeVideo.idl:
	* browser-plugin/idl/totemIGMPControls.idl:
	* browser-plugin/idl/totemIGMPError.idl:
	* browser-plugin/idl/totemIGMPErrorItem.idl:
	* browser-plugin/idl/totemIGMPMedia.idl:
	* browser-plugin/idl/totemIGMPPlayer.idl:
	* browser-plugin/idl/totemIGMPPlayerApplication.idl:
	* browser-plugin/idl/totemIGMPPlaylist.idl: